# riddle_server

./: pyproject.toml  requirements.txt  run.sh
app/: models.py  views.py
app/migrations/: 0001_initial.py
deploy/: README.md  riddles.service
riddles/: server.py
